--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,11 @@
             <artifactId>maven-surefire-plugin</artifactId>
             <version>2.19</version>
         </plugin>
+	<plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-war-plugin</artifactId>
+            <version>2.2</version>
+        </plugin>	    
     </plugins>
 </build>
 	
